# polyhedron-ops

./: .gitignore  Cargo.toml  LICENSE  README.md  RECIPES.md  rustfmt.toml
.github/: dependabot.yml
assets/: wooden_lounge_1k.tdl  wooden_lounge_2k.tdl.REMOVED.git-id
examples/: nsi_render.rs  playground.rs
examples/bevy/: bevy.rs  console.rs  main.rs
examples/playground/: main.rs  nsi_render.rs  playground.rs
osl/: dlPrincipled.oso  environmentLight.oso
src/: base_polyhedra.rs  grammar.pest  helpers.rs  lib.rs  main.rs  mesh_buffers.rs  nsi_render.rs  operators.rs  parser.rs  selection.rs  tests.rs  text_helpers.rs
src/io/: bevy.rs  mod.rs  nsi.rs  obj.rs
